# docker-img-downloader

./: .env.example  .gitignore  README.md  pyproject.toml
config/: service.example.yaml
scripts/: imgpull.sh  run-sync-service.ps1
src/docker_img_downloader/: __init__.py  compose_support.py  config.py  image_ref.py  imgpull.py  imgsync_compose.py  sync_service.py
tests/: test_compose_support.py  test_image_ref.py  test_sync_service.py
